# browser-ctl

./: .gitignore  LICENSE  PRIVACY.md  README.md  README_CN.md  pyproject.toml
.github/workflows/: publish.yml
browser_ctl/: SKILL.md  __main__.py  cli.py  client.py  server.py
browser_ctl/extension/: actions.js  background.js  click.js  content-script.js  manifest.json
extension/: background.js  manifest.json
