[project]
name = "browser-ctl"
version = "0.1.0"
description = "Control your browser from the command line via a Chrome extension + WebSocket bridge"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
]

[project.scripts]
bctl = "browser_ctl.cli:main"
bctl-server = "browser_ctl.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["browser_ctl*"]

[tool.setuptools.package-data]
browser_ctl = ["SKILL.md"]
